chore: remove hardcoded API key from env config
Remove the specific API key from the development environment configuration
to prevent security risks. Replace the sensitive value with a generic
placeholder to serve as a template.

--- a/api/.env.dev
+++ b/api/.env.dev
@@ -1,4 +1,4 @@
 
 ###> symfony/framework-bundle ###
-APP_SECRET=f49e55cdec1ee07e41b28bcd209bec68
+APP_SECRET=API_KEY_HERE
 ###< symfony/framework-bundle ###
